--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+afl-cov-0.6.2f (12/8/2024)
+    - (XtremeBlaze777) Created a port to Python3.
+    - Fixed unicode decode error that crashed afl-cov by adding guards
+    - Added update to Python3 info in README.md
+
 afl-cov-0.6.2 (12/26/2018):
     - (Tim Strazzere) Add support for llvm-cov compiled binaries. Add a check
       when ensuring the binary was instrumented with gcov to catch an llvm-cov
